<resources>
    <string name="app_name">Livros</string>
    <string name="text_format_book_pages">Número de páginas: %1$d</string>
    <string name="text_format_book_year">Ano de publicação: %1$d</string>
    <string name="text_book_available">Disponível</string>
    <string name="text_book_unavailable">Indisponível</string>
    <string name="text_book_media_paper">Impresso</string>
    <string name="text_book_media_ebook">E-Book</string>
    <string name="text_book_title">Title</string>
    <string name="text_book_author">Author</string>
    <string name="text_book_pages">Number of pages</string>
    <string name="text_book_year">Year of publication</string>
    <string name="button_save">Save</string>
</resources>
